# unpaper

./: .dir-locals.el  .editorconfig  .gitignore  .mailmap  .mergify.yml  .pre-commit-config.yaml  .project  .travis.yml  AUTHORS  COPYING  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  configure  configure.ac  constants.h  file.c  file.h  imageprocess.c  imageprocess.h  interpolate.c  interpolate.h  make.sh  meson.build  meson.options  options.c  options.h  parse.c  parse.h  requirements.txt  test-driver  tools.c  tools.h  unpaper.1  unpaper.1.xml  (+3 more)
.github/workflows/: meson-build-and-test.yml  pre-commit.yml
_internal/: build-distribution.xml
_internal/templates/: README.template  index.html.template
_internal/tests/: index.html
_internal/tests/img/: style.css
_internal/tests/log/: testA1.txt  testB1.txt  testB2.txt  testB3.txt  testC1.txt  testC2.txt  testD1.txt  testD2.txt  testD3.txt  testE.txt
_internal/tests/make/: _run-tests.sh  build-tests.xml  generate-index-html.xslt  generate-tests-sh.xslt  testcases.xml
build-scripts/: build-all.sh  setup-all.sh  test-all.sh
doc/: basic-concepts.md  conf.py  file-formats.md  image-processing.md  index.html  unpaper.1.rst  unpaper.html  unpaper.md
doc/img/: documentation.odg  nospam.js  style.css
imageprocess/: blit.c  blit.h  deskew.c  deskew.h  fill.c  fill.h  filters.c  filters.h  image.c  image.h  interpolate.c  interpolate.h  masks.c  masks.h  math_util.h  pixel.c  pixel.h  primitives.c  primitives.h
lib/: logging.c  logging.h  options.c  options.h  physical.c  physical.h
meson-environments/: clang-o2-openmp.ini  clang-o2.ini  gcc-o0.ini  gcc-o2.ini
tests/: NoInputFile.sh  compare-image.c  goldenE1-03.pbm  goldenE1-06.pbm  goldenE2-01.pbm  goldenH101.pbm  goldenH104.pbm  goldenH105.pbm  prologue.sh.in  runtestA1.sh  runtestB1.sh  runtestB2.sh  runtestB3.sh  runtestC1.sh  runtestC2.sh  runtestC3.sh  runtestD1.sh  runtestD2.sh  runtestD3.sh  runtestE.sh  runtestE1.sh  runtestE2.sh  runtestE3.sh  runtestF1.sh  runtestF2.sh  runtestF3.sh  runtestG1.sh  runtestG2.sh  runtestG3.sh  runtestH1.sh  runtestH2.sh  runtestH3.sh  unpaper_tests.py
tests/golden_images/: goldenA1.pbm  goldenA2.pbm  goldenB2.ppm.license  goldenC1.pbm  goldenC2.pbm  goldenC3.pbm  goldenE1-01.pbm  goldenE1-02.pbm  goldenE1-03.pbm  goldenE1-04.pbm  goldenE1-05.pbm  goldenF.pbm
tests/source_images/: white.png.license
